# MachineUnlearning

./: .gitignore  README.md  pyproject.toml
src/machineunlearning/: train.py  unlearn.py  utils.py
src/machineunlearning/conf/: config.yaml  unlearn.yaml
src/machineunlearning/conf/dataset/: cifar10.yaml  cifar100.yaml  cifar20.yaml  fashionmnist.yaml  mnist.yaml  tinyimagenet.yaml
src/machineunlearning/conf/model/: lrtorchnet.yaml  mlp.yaml  resnet101.yaml  resnet152.yaml  resnet18.yaml  resnet34.yaml  resnet50.yaml  simplecnn.yaml
src/machineunlearning/conf/optimizer/: adam.yaml  sgd.yaml
src/machineunlearning/conf/strategy/: amnesiac.yaml  bad_teacher.yaml  baseline.yaml  boundary.yaml  fine_tune.yaml  fisher.yaml  gradient_ascent.yaml  ntk.yaml  retrain.yaml  scrub.yaml  ssd.yaml  unsir.yaml
src/machineunlearning/config/: __init__.py  schemas.py
src/machineunlearning/data/: dataset.py  download_tinyimagenet.py  metrics.py  utils.py
src/machineunlearning/evaluation/: __init__.py  metrics.py
src/machineunlearning/model/: __init__.py  models.py  resnet.py
src/machineunlearning/strategies/: __init__.py  _attack.py  _bad_teacher.py  _distill.py  _ssd.py  _unsir.py  amnesiac.py  bad_teacher.py  base.py  baseline.py  boundary.py  fine_tune.py  fisher.py  gradient_ascent.py  ntk.py  retrain.py  scrub.py  ssd.py  strategies.py  unlearn.py  unsir.py  utils.py
tests/: conftest.py  test_cli.py  test_strategies.py
