[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[project]
name = "machineunlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tinyimagenet>=0.9.9",
    "tqdm>=4.67.3",
]

[project.scripts]
mu-train = "machineunlearning.train:main"
mu-unlearn = "machineunlearning.unlearn:main"
mu-download-tinyimagenet = "machineunlearning.data.download_tinyimagenet:main"


[project.optional-dependencies]
cpu = ["torch>=2.11", "torchvision>=0.26"]
cu130 = ["torch>=2.11", "torchvision>=0.26"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["ruff>=0.15.11", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff]
line-length = 120
